--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Mallanna&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
 	font-family: Mallanna, sans-serif;
 	scroll-behavior: smooth;
@@ -111,4 +113,9 @@ header.svelte-8i8o6j {
 
 div.svelte-8i8o6j, div.svelte-w9ftfy span.svelte-w9ftfy, p.svelte-w9ftfy.svelte-w9ftfy, button.svelte-fnc3e1 {display: none !important;}
 
-
+h3.svelte-8i8o6j{
+	font-family: 'Fira Sans Extra Condensed', sans-serif !important;
+	text-transform: uppercase;
+	font-weight: 900;
+	font-size: 2em;
+}
