--- a/src/components/Marquee/Marquee.module.css
+++ b/src/components/Marquee/Marquee.module.css
@@ -1,3 +1,8 @@
 .marquee {height: 80vh; overflow: hidden;}
 .marquee div {height: 100%;}
 .marquee div img {height: 100%;}
+
+@media screen and (max-width: 768px) {
+    .marquee {height: 50vh;}
+}
+    
