--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -38,3 +38,13 @@
 .footer_logo img {
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .footer {
+        padding-bottom: 20px;
+    }
+    .footer_logo {
+        width: 40%;
+        margin-bottom: 20px;
+    }
+}
