--- a/src/components/MintConfirmed/MintConfirmed.module.css
+++ b/src/components/MintConfirmed/MintConfirmed.module.css
@@ -25,3 +25,24 @@
     font-size: 2em;
     margin-bottom: 0;
 }
+
+.mint_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .modal {
+        height: fit-content;
+        padding: 20px;
+    }
+}
